--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <b>haha</b>
     <p>phac du</p>
+    <video controls="controls">
+		<source src="E:/Codeee/html/yourlieinapril.mp4" type="video/mp4" />
+	</video>
 </body>
 </html>
